syntax= "proto3";
package auth;

service Verify {
    rpc VerifyUser (VerifyUserRequest) returns (VerifyUserResponse);
}

service User {
    rpc createUser (CreateUserRequest) returns (CreateUserResponse);
}

message VerifyUserRequest {
    string jwt = 1;
}

message VerifyUserResponse {
    bool verified = 1;
    uint32 userId = 2;
    string userRole = 3;
}

message CreateUserRequest {
    Role role = 1;
    uint32 role_id = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    uint32 id = 1;
}

enum Role {
    CUSTOMER = 0;
    COURIER = 1;
    RESTAURANT = 2;
}